--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+app_index:
+    path: /index
+    controller: App\Controller\IndexController::index
